<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.lushen124</groupId>
  <artifactId>yune</artifactId>
  <version>0.9.4</version>
  <name>Yune</name>
  <description>A Universal Fire Emblem Randomizer</description>
  <properties>
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
  <defaultGoal>clean package</defaultGoal>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>res</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <filters>
            <filter>
              <artifact>*:*</artifact>
              <excludes>
              	<exclude>META-INF/*.MF</exclude>
                <exclude>META-INF/*.SF</exclude>
                <exclude>META-INF/*.DSA</exclude>
                <exclude>META-INF/*.RSA</exclude>
              </excludes>
            </filter>
          </filters>
          <transformers>
            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
              <mainClass>application.Main</mainClass>
            </transformer>
          </transformers>
        </configuration>
      </plugin>  
    </plugins>
  </build>
  
  <dependencies>
  	<dependency>
  	  <groupId>com.google.code.gson</groupId>
  	  <artifactId>gson</artifactId>
  	  <version>2.11.0</version>
  	</dependency>
  </dependencies>
  
  <profiles>
    <profile>
        <id>swt-windows</id>
        <activation>
            <os>
                <family>windows</family>
            </os>
        </activation>
        <dependencies>
            <dependency>
                <groupId>org.eclipse.platform</groupId>
                <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
                <version>3.135.0</version>
            </dependency>
        </dependencies>
    </profile>

    <profile>
        <id>swt-linux</id>
        <activation>
            <os>
                <name>linux</name>
            </os>
        </activation>
        <dependencies>
            <dependency>
                <groupId>org.eclipse.platform</groupId>
                <artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
                <version>3.135.0</version>
            </dependency>
        </dependencies>
    </profile>

    <profile>
        <id>swt-mac</id>
        <activation>
            <os>
                <family>mac</family>
            </os>
        </activation>
        <dependencies>
            <dependency>
                <groupId>org.eclipse.platform</groupId>
                <artifactId>org.eclipse.swt.cocoa.macosx.aarch64</artifactId>
                <version>3.135.0</version>
            </dependency>
        </dependencies>
    </profile>
  </profiles>
</project>
